Configure jest for testing
- Allow import extensions
- Example import for styles
- Example import for image
- Example async await in test
- Remove cruft in package.json

--- a/client/modules/sample/components/Header/styles.scss
+++ b/client/modules/sample/components/Header/styles.scss
@@ -4,8 +4,20 @@
 }
 
 .heading {
+  align-items: center;
   composes: zeal;
+  display: flex;
   margin: 50px;
   padding: 50px;
   text-align: center;
+}
+
+.logo {
+  height: auto;
+  max-width: 200px;
+}
+
+.logo,
+.title {
+  flex: 1;
 }
